...
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
    <string name="named_message" translatable="false">%1$s \'%2$s\'</string>
    <string name="zap">Zap</string>
    <string name="browse_epg">Browse EPG</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
...
    <string name="multiepg_zoom">Visible span</string>
    <string name="multiepg_zoom_hours">%1$dh</string>
    <string name="multiepg_text_size">MultiEPG text size</string>
    <string name="multiepg_text_size_long">Programme titles and channel names in the MultiEPG grid</string>
    <string name="multiepg_text_size_compact">Compact</string>
    <string name="multiepg_text_size_comfortable">Comfortable</string>
    <string name="ssl_enabled">https</string>
    <string name="ssid">Wifi Name</string>
...
    <string name="settings">Settings</string>
    <string name="host_long">Hostname or IP</string>
    <string name="close">Close</string>
    <string name="minutes_short">min.</string>
    <string name="user">User</string>
...
    <string name="hdds">Hard disks</string>
    <string name="hdd_capacity">%1$s (%2$s free)</string>
    <string name="current_event">Current event</string>
    <string name="timeout">Timeout</string>
    <string name="seconds">seconds</string>
...
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
...
    <string name="auto_switch_profile_wifi_based">Auto Profile switch</string>
    <string name="auto_switch_profile_wifi_based_long">Automatically switch profile based on Wifi connection</string>
    <string name="reset_cache">Reset cache</string>
    <string name="reset_cache_long">Clear the offline cache for this profile or all profiles</string>
    <string name="reset_cache_current">Current profile</string>
    <string name="reset_cache_all">All profiles</string>
    <string name="reset_cache_done">Cache reset</string>
    <string name="profile_name">Profile name</string>
...
    <string name="default_bouquet_set_to_name" translatable="false">%1$s \'%2$s\'</string>
    <string name="loading">Loading&#8230;</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="license_gplv3">LICENSE:\nDreamDroid is free Software!\nLicensed under the GNU General Public License 3 https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="source_code_link">Source code available at: http://github.com/sreichholf/dreamDroid</string>
...
    <string name="enable_instant_zap">Instant zap</string>
    <string name="enable_instant_zap_long">Instant zap when short-tapping a service</string>
    <string name="show_now_playing_strip">Now-playing strip</string>
    <string name="show_now_playing_strip_long">Show what\'s currently on the box on TV &amp; Movies</string>
    <string name="simple_remote">Simple remote layout</string>
...
    <string name="play_button_as_play_pause">Use Play button as Play/Pause button</string>
    <string name="play_button_as_play_pause_long">Use Play button as Play/Pause button in widget and in app remote</string>
    <string name="appearance">Appearance</string>
    <string name="usability">Useability</string>
    <string name="start_screen">Start screen</string>
    <string name="start_screen_long">Screen shown when the app opens (main drawer destinations)</string>
    <string name="use_picons">Use Picons</string>
    <string name="use_picons_long">Enable the use of picons in certain areas.\nRequires picons in app storage (picons/)</string>
    <string name="sync_picons">Sync Picons</string>
    <string name="sync_picons_long">Sync Picons into app storage using the currently configured connection profile</string>
    <string name="sync_picons_path">Picons - remote path</string>
    <string name="sync_picons_path_long">Path where the Picons on your dreambox reside</string>
    <string name="connecting">Connecting</string>
...
    <string name="picons_offline_global_hint">Synced (offline) picons and the sync itself use the global picon settings.</string>
    <string name="picons_profiles_hint">Profiles choose whether to use online picons and how they are named.</string>
    <string name="picons">Picons</string>
    <string name="developer_settings">Developer settings</string>
    <string name="dump_xml">Dump xml content</string>
...
    <string name="encoder_port">Stream port</string>
    <string name="tools">Tools</string>
    <string name="picon_sync_started">Picon synchronization started. See notifaction area for details.</string>
    <string name="picon_sync_running">There is still another picon synchronization running!</string>
    <string name="streaming">Streaming</string>
    <string name="integrated_video_player">Integrated video player</string>
    <string name="integrated_video_player_long">Use integrated videoplayer when playing streams</string>
    <string name="playback_failed">Playback failed!</string>
...
    </string-array>
    <string name="theme">Day/Night Theme</string>
    <string name="theme_long">Day/Night Theme choices</string>
    <string-array name="hw_accel_entries">
        <item>Disabled</item>
...
    <string name="use_hw_accel">Accelerated decoding</string>
    <string name="use_hw_accel_long">Use Hardware acceleration for video decoding (%s)</string>
    <string name="video_player">Video Player</string>
    <string name="video_enable_gestures_long">Enable gestures for volume and brightness control</string>
    <string name="video_enable_gestures">Enable gestures</string>
...
    <string name="seek">Seek</string>
    <string name="preferences">Preferences</string>
    <string name="backup">Backup</string>
    <string name="backup_current_profile">Current</string>
    <string name="backup_export">Export</string>
...
